WIP: openAPI generator
