# src/openapi_server/apis/resource_api_base.py
@@ -1,11 +1,11 @@
 # coding: utf-8
 
-from typing import ClassVar, Dict, List, Optional, Tuple, Union  # noqa: F401
+from typing import ClassVar, Dict, List, Tuple  # noqa: F401
 
 from pydantic import Field, StrictBytes, StrictStr
+from typing import Any, Tuple, Union
 from typing_extensions import Annotated
-
-from openapi_server.models.nearest_item import NearestItem
+from fastapi.responses import FileResponse
 
 
 class BaseResourceApi:
@@ -14,14 +14,6 @@ class BaseResourceApi:
     def __init_subclass__(cls, **kwargs):
         super().__init_subclass__(**kwargs)
         BaseResourceApi.subclasses = BaseResourceApi.subclasses + (cls,)
-    async def resource_image_get(
-        self,
-        topk: Optional[Annotated[int, Field(strict=False, ge=0)]],
-        body: Optional[Union[StrictBytes, StrictStr, Tuple[StrictStr, StrictBytes]]],
-    ) -> List[NearestItem]:
-        ...
-
-
     async def resource_post(
         self,
         file: Union[StrictBytes, StrictStr, Tuple[StrictStr, StrictBytes]],
@@ -29,9 +21,8 @@ class BaseResourceApi:
         ...
 
 
-    async def resource_text_get(
+    async def resource_resource_id_get(
         self,
-        text: StrictStr,
-        topk: Optional[Annotated[int, Field(strict=False, ge=0)]],
-    ) -> List[NearestItem]:
+        resourceId: Annotated[StrictStr, Field(description="Resource ID")],
+    ) -> FileResponse:
         ...
